
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ uint64_t ;
typedef int pthread_t ;


 int alloc_thread_func ;
 int dealloc_thread_func ;
 int pthread_create (int *,int *,int ,int *) ;
 int pthread_join (int ,int *) ;
 scalar_t__ rk64 (scalar_t__) ;
 int wk32 (scalar_t__,int ) ;

void go(uint64_t thread_t) {
  uint64_t bsd_thread_info = rk64(thread_t + 0x388);
  uint64_t cred_t = rk64(bsd_thread_info + 0x160);


  wk32(cred_t+0x18, 0);
  wk32(cred_t+0x1c, 0);

  pthread_t dealloc_thread;
  pthread_create(&dealloc_thread, ((void*)0), dealloc_thread_func, ((void*)0));

  pthread_t alloc_thread;
  pthread_create(&alloc_thread, ((void*)0), alloc_thread_func, ((void*)0));

  pthread_join(dealloc_thread, ((void*)0));
}
